<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".CapturePhotoFragment">


<ImageView

    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toTopOf="@id/layout1"
    android:id="@+id/image"
    android:layout_margin="20dp"
    android:layout_width="match_parent"
    android:layout_height="300dp"/>

<LinearLayout
    android:id="@+id/layout1"
    android:gravity="center"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_take_photo"
        app:cornerRadius="10dp"
        android:text="@string/take_a_photo"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/bt_upload_photo"
        app:cornerRadius="10dp"
        android:text="@string/upload_a_photo"
        android:textAllCaps="false"
        android:layout_margin="10dp"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"/>

</LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.button.MaterialButton

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:id="@+id/Predict"
            app:cornerRadius="10dp"
            android:text="@string/predict"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/presidents"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>


    </LinearLayout>










</LinearLayout>