<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CapturePhotoMoneyFragment"
    android:orientation="vertical"
    android:background="#20a1ed">

    <TextView
        android:layout_marginTop="25dp"
        android:layout_marginBottom="70dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#ffea00"
        android:text="@string/currency_detector"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <ImageView

        android:src="@drawable/money"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/layout1"
        android:id="@+id/image"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <LinearLayout
        android:id="@+id/layout1"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bt_take_photo_CD"
            android:backgroundTint="#ffea00"
            android:textColor="#0651b4"
            app:cornerRadius="10dp"
            android:text="@string/take_a_photo"
            android:textAllCaps="false"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>



    </LinearLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@id/layout1"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <com.google.android.material.button.MaterialButton
            android:backgroundTint="#ffea00"
            android:textColor="#0651b4"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout1"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_gravity="center"
            android:id="@+id/bt_Predict_CD"
            app:cornerRadius="10dp"
            android:text="@string/predict"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/tv_predict"
            android:gravity="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="5dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>


    </LinearLayout>









</LinearLayout>